# korecrypto-rs

./: .gitignore  .gitmodules  Cargo.toml  PLAN.md  README.md  RELEASE_NOTES
.github/workflows/: ci.yml
boring/: Cargo.toml
boring-sys/: Cargo.toml  README.md
boring-sys/patches/: boring-pq.patch
boring-sys/src/: lib.rs
boring/examples/: fips_enabled.rs  mk_certs.rs
boring/src/: aead.rs  aes.rs  asn1.rs  bn.rs  cmac.rs  drbg.rs  dsa.rs  ec.rs  eckcdsa.rs  error.rs  hash.rs  kcdsa.rs  kdf.rs  lib.rs  memcmp.rs  mlkem.rs  nid.rs  pkey.rs  prf.rs  rand.rs  rsa.rs  sha.rs  sign.rs  symm.rs
boring/src/ssl/: callbacks.rs  mod.rs
boring/src/x509/: extension.rs  mod.rs  store.rs
hyper-boring/: Cargo.toml  README.md
hyper-boring/src/: cache.rs  lib.rs  v1.rs
hyper-boring/tests/: v1.rs
scripts/: publish.sh
tokio-boring/: Cargo.toml  README.md
tokio-boring/examples/: simple-async.rs
tokio-boring/src/: async_callbacks.rs  lib.rs
tokio-boring/tests/: async_custom_verify.rs  async_get_session.rs  async_private_key_method.rs  async_select_certificate.rs  client_server.rs  rpk.rs
tokio-boring/tests/common/: mod.rs
uefi-smoketest/: Cargo.toml  README.md  run-qemu.sh
uefi-smoketest/src/: main.rs
