[package]
name = "hyper-korecrypto"
version = { workspace = true }
authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
edition = { workspace = true }
description = "Hyper TLS support via BoringSSL"
license = "MIT OR Apache-2.0"
repository = { workspace = true }
documentation = "https://docs.rs/hyper-korecrypto"
readme = "README.md"
exclude = ["test/*"]
rust-version = { workspace = true }

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["korecrypto/default", "tokio-korecrypto/default"]

# Use a FIPS-validated version of boringssl.
fips = ["korecrypto/fips", "tokio-korecrypto/fips"]

[dependencies]
antidote = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client", "client-legacy"] }
linked_hash_set = { workspace = true }
korecrypto = { workspace = true, default-features = false }
tokio = { workspace = true }
tokio-korecrypto = { workspace = true, default-features = false  }
tower-layer = { workspace = true }
tower-service = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true, features = ["http1", "http2", "service", "tokio"] }
hyper = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = [ "full" ] }
tower = { workspace = true, features = ["util"] }
futures = { workspace = true }

[package.metadata.release]
pre-release-hook = [
  "git-cliff",
  "--workdir", "..",
  "-o", "../RELEASE_NOTES",
  "--tag", "{{version}}"
]
