[package]
name = "tokio-korecrypto"
version = { workspace = true }
authors = ["Alex Crichton <alex@alexcrichton.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = "https://github.com/zeronsoftn/korecrypto"
documentation = "https://docs.rs/tokio-korecrypto"
description = """
An implementation of SSL streams for Tokio backed by BoringSSL
"""

[package.metadata.docs.rs]
features = ["rpk"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["korecrypto/default"]

# Use a FIPS-validated version of boringssl.
fips = ["korecrypto/fips", "korecrypto-sys/fips"]

# Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
rpk = ["korecrypto/rpk"]

[dependencies]
korecrypto = { workspace = true, default-features = false }
korecrypto-sys = { workspace = true, default-features = false }
tokio = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
anyhow = { workspace = true }
